Fix backround image on mobile

--- a/style.css
+++ b/style.css
@@ -162,13 +162,14 @@ main {
             flex-direction: column;
             overflow: visible;
         }
-            
 
             .logo-section { 
                 width: 100%;
                 height: 30vh;
-                background-size: contain;
+                background-size: cover;
+                background-repeat:no-repeat;
             }
+
                 .logo-text {
                     margin-top: 10vh;
                     width: 100%;
@@ -176,6 +177,7 @@ main {
                     position: relative;
                     background-color: rgba(3, 3, 2, 0.685);
                 }
+
                     .logo {
                         position: absolute;
                         font-size: 4rem;
@@ -185,8 +187,6 @@ main {
                         left: 20%;
                         top: -3px;
                     }
-
-
 
                 .neonText {
                     color: #fff;
@@ -236,6 +236,7 @@ main {
             .form-section > div {
                 padding: 10px
             }
+
                 .top {
                     display: flex;
                     flex-direction: column;
@@ -286,7 +287,6 @@ main {
                         input {
                             height: 1.5rem;
                         }
-        
         
                 .bottom {
                     display: flex;
